# background-coding-agents

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  fleet-manager-cli  pyproject.toml  requirements.txt  setup.sh  verify_setup.sh
agents/: plc_agent.py
docs/: comparison-spotify-vs-manufacturing.md  diagrams.md  implementation-roadmap.md  spotify-insights.md
examples/safety_interlock_update/: README.md
fleet-manager/: cli.py  config.yaml
prompts/: protocol_migration.md  safety_interlock_update.md
src/background_coding_agents/: __init__.py
src/background_coding_agents/agents/: __init__.py  plc_agent.py
src/background_coding_agents/api/: __init__.py  app.py  routes.py
src/background_coding_agents/config/: __init__.py  settings.py
src/background_coding_agents/fleet_manager/: __init__.py  cli.py  config.yaml
src/background_coding_agents/fleet_manager/migrations/: example_migration.yaml  safety_interlock_update.yaml
src/background_coding_agents/llm/: __init__.py  base.py  factory.py
src/background_coding_agents/llm/providers/: __init__.py  anthropic.py  llama_cpp.py  openai.py  openai_compatible.py  vllm.py
src/background_coding_agents/logging/: __init__.py  logger.py
src/background_coding_agents/mocks/: __init__.py
src/background_coding_agents/models/: __init__.py  agent.py  changes.py  llm.py  migration.py  site.py  verification.py
src/background_coding_agents/telemetry/: __init__.py
src/background_coding_agents/utils/: __init__.py
src/background_coding_agents/verifiers/: __init__.py  plc_compiler_verifier.py  safety_verifier.py
verifiers/: plc_compiler_verifier.py  safety_verifier.py
